--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,6 +4,16 @@
 
     <h1 class="text-primary" style="font-size:24px;padding-bottom:1.5em;">MAZE</h1>
 
+    <div class="controls">
+      <select id='select-generator' >
+        <option value=''>Algorithm</option>
+        <option value='binary-tree'>Binary Tree</option>
+        <option value='sidewinder'>Sidewinder</option>
+      </select>
+      <label for="width">Width: <input type="text" id="width" class="numbers" maxlength="4" value="" /></label>
+      <label for="height">Height: <input type="text" id="height" class="numbers" maxlength="4" value="" /></label>
+    </div> 
+
     <!-- this is where the client and server output will be shown/appended -->
     <!-- <div id="message-content" style="height:230px;overflow-y:auto !important;background-color:#fff;padding:1em;border-radius:10px;"></div> -->
     <div id="message-content" style="margin: 11px;" ></div>
