walking skeleton: displays map based on user's input
walking skeleton: displays map based on user's input

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,23 +7,16 @@
     <div class="controls">
       <select id='select-generator' >
         <option value=''>Algorithm</option>
-        <option value='binary-tree'>Binary Tree</option>
+        <option value='binarytree'>Binary Tree</option>
         <option value='sidewinder'>Sidewinder</option>
       </select>
       <label for="width">Width: <input type="text" id="width" class="numbers" maxlength="4" value="" /></label>
       <label for="height">Height: <input type="text" id="height" class="numbers" maxlength="4" value="" /></label>
     </div> 
 
-    <!-- this is where the client and server output will be shown/appended -->
-    <!-- <div id="message-content" style="height:230px;overflow-y:auto !important;background-color:#fff;padding:1em;border-radius:10px;"></div> -->
-    <div id="message-content" style="margin: 11px;" ></div>
-
     <form style="padding-top:1.5em;">
-        <div class="form-group">
-            <label for="message-input">Message:</label>
-            <textarea id="message-input" class="form-control" style="width:75%; margin: 0 7%;"></textarea>
-        </div>
         <button id="send-button" type="button" class="btn btn-primary">Send</button>
     </form>
 
+    <div id="maze"></div>
 }
