--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -45,7 +45,8 @@ fade {
 }
 
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
+  overflow: auto;
   width:100%;
   background-color: #014D43;
 }
@@ -71,9 +72,9 @@ body.dark-mode input[type=text] {
 }
 
 #maze {
-  position: fixed;
-  /* width: 500px;
-  height: 500px; */
+  overflow-y: scroll;
+  /* position: fixed; */
+  position: relative;
   float: left;
   margin: 30px;
   background-color: #808080;
