--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,32 +2,36 @@
 
 @main("MAZE") {
 
-    <h1 class="text-primary" style="font-size:24px;padding-bottom:1.5em;">MAZE</h1>
-
-    <div class="controls">
-      <select id='select-generator' >
-        <option value=''>Algorithm</option>
-        <option value='binarytree'>Binary Tree</option>
-        <option value='sidewinder'>Sidewinder</option>
-      </select>
-      <label for="width">Width: <input type="text" id="width" class="numbers" maxlength="4" value="" /></label>
-      <label for="height">Height: <input type="text" id="height" class="numbers" maxlength="4" value="" /></label>
-    </div>
-
-    <div class="controls">
-      <span id="display-type-span" >
+    <!-- <h1 class="text-primary" style="font-size:24px;padding-bottom:1.5em;">MAZE</h1> -->
+    <ul class="menu">
+      <li title="generate"><a href="#" class="menu-button home">options</a></li>
+    </ul>
+    <ul class="menu-bar">
+      <li><a href="#" class="menu-button">Maze</a></li>
+      <li><label for="width">Width: <input type="text" id="width" class="numbers" maxlength="4" value="" /></label></li>
+      <li><label for="height">Height: <input type="text" id="height" class="numbers" maxlength="4" value="" /></label></li>
+      <li>
+        <select id='select-generator' >
+          <option value=''>Algorithm</option>
+          <option value='binarytree'>Binary Tree</option>
+          <option value='sidewinder'>Sidewinder</option>
+        </select>
+      </li> 
+      <li>
         <input type="radio" id="display-type-choice-1" value="unsolved" name="display-type" checked="checked" />
-        <label for="display-type-choice-1">Unsolved</label>
-        <br />
-        <input type="radio" id="display-type-choice-2" value="distance-heat-map" name="display-type" />
-        <label for="display-type-choice-2">Distance Heat Map</label>
-        <br />
+        <label for="display-type-choice-1" class="menu-radio">Unsolved</label>
+      </li>
+      <li>
+        <input type="radio" id="display-type-choice-2" value="distance--map" name="display-type" />
+        <label for="display-type-choice-2" class="menu-radio">Distance Map</label>
+      </li>
+      <li>
         <input type="radio" id="display-type-choice-3" value="solved" name="display-type" />
-        <label for="display-type-choice-3">Solved</label>
-        <br />
-      </span>
-      <button id="send-button" type="button" class="btn btn-primary">Generate</button>
-    </div>
+        <label for="display-type-choice-3" class="menu-radio">Solved</label>
+      </li>
+      <li><a id="send-button" href="#" class="menu-button">Generate</a></li>
+      <!-- <li><button id="send-button" type="button" class="btn btn-primary">Generate</button></li> -->
+    </ul> 
 
     <div id="maze"></div>
 }
