--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,199 @@
+/* hidden vertical menu */
+
+@import url("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.min.css");
+
+.menu, .menu-bar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  /* height: 100%; */
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  /* background: #f7f7f7; */
+  z-index:10;  
+  overflow:hidden;
+  box-shadow: 2px 0 18px rgba(0, 0, 0, 0.26);
+}
+.menu li a {
+display: block;
+text-indent: -500em;
+height: 5em;
+width: 5em;
+line-height: 5em;
+text-align:center;
+color: #72739f;
+position: relative;
+border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+transition: background 0.1s ease-in-out;
+}
+.menu li a:before {
+font-family: FontAwesome;
+speak: none;
+text-indent: 0em;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+font-size: 1.4em;
+}
+.menu li a.home:before {
+  content: "\f039";
+}
+.menu-bar li select:hover,
+.menu-bar li a:hover,
+.menu li a:hover,
+.menu-bar li button:hover,
+.menu-bar li label:hover,
+.menu-bar li input[type=radio]:hover,
+.menu-bar li:hover,
+.menu-bar li:first-child a {
+/* background: #267fdd; */
+  background: #555;
+  color: #fff;
+}
+.menu-bar li label,
+.menu-bar li input[type=text] {
+  margin-top: 6px;
+}
+.menu-bar li input[type=radio] {
+  margin-left: 8px;
+}
+.menu-bar li label {
+  margin-left: 8px;
+}
+.menu-bar li label.menu-radio {
+  margin-left: 2px;
+}
+.menu-bar li input[type=text] {
+  width: 64px;
+}
+.menu-bar li button,
+.menu-bar li select {
+  color: #cecece;
+  border: none;
+}
+.menu-bar li button {
+  background-color: #252525;
+}
+/* .menu-bar li select {
+  background-color: #353535;
+} */
+.menu-bar li select,
+.menu-bar li {
+  background-color: #353535;
+}
+.menu-bar li input[type=text] {
+  color: #cecece;
+  background-color: #696969;
+  border: none;
+}
+/* body.dark-mode input[type=text] {
+  background-color: #111;
+  color: #cecece;
+} */
+
+.menu-bar{
+  overflow:hidden;
+  left:5em;
+  z-index:5;
+  width:0;
+  height:0;
+  transition: all 0.1s ease-in-out;
+}
+/* .menu-bar li select {
+  color: #72739f;
+} */
+.menu-bar li a {
+  /* color: #72739f; */
+  color: #cecece;
+}
+.menu-bar li a,
+.menu-bar li label,
+.menu-bar li label input[type=text],
+.menu-bar li label input[type=radio],
+.menu-bar li select {
+  text-align:center;
+
+}
+.menu-bar li a,
+.menu-bar li select {
+  display: block;
+  width: 100%;
+  height: 4em;
+  line-height: 4em;
+  /* text-align:left; */
+  /* margin-left: 6px; */
+  text-decoration:none;  
+  position: relative;
+  /* font-family:verdana; */
+  /* border-bottom: 1px solid rgba(0, 0, 0, 0.05); */
+  transition: background 0.1s ease-in-out;
+}
+.menu-bar li:first-child a {
+  height:5em;
+  /* background: #267fdd; */
+  /* background: #555; */
+  background: #131313;
+  color: #fff;    
+  line-height:5
+}
+
+
+.para{
+  color:#033f72;
+  padding-left:100px;
+  font-size:3em;
+  margin-bottom:20px;
+}
+
+.open{
+  width:10em;
+  height:100%;
+}
+
+@media all and (max-width: 500px) {
+  .container{
+      margin-top:100px;
+  }
+  .menu{
+      height:5em;
+      width:100%;
+  }
+  .menu li{
+      display:inline-block;
+      float:left;
+  }
+  .menu-bar li a{
+      width:100%;
+  }
+  .menu-bar{
+      width:100%;
+      left:0;
+      height:0;
+  }
+  .open{
+      width:100%;
+      height:auto;
+  }
+  .para{
+  padding-left:5px;
+}  
+}
+@media screen and (max-height: 34em){
+.menu li,
+.menu-bar {
+  font-size:70%;
+}
+}
+@media screen and (max-height: 34em) and (max-width: 500px){
+.menu{
+      height:3.5em;
+  }
+}
+/* maze */
+
 @-webkit-keyframes fadeinout {
   0%,100% { opacity: 0; }
   50% { opacity: 1; }
@@ -60,30 +256,12 @@ body.dark-mode {
   color: #cecece;
 }
 
-body.dark-mode button,
-body.dark-mode select {
-  background-color: #111 !important;
-  color: #cecece !important;
-}
-body.dark-mode input[type=text] {
-  /* background-color: #c0c0c0; */
-  background-color: #111;
-  color: #cecece;
-}
-.controls input[type="text"] {
-  width: 64px;
-}
-.controls label,
-.controls input[type=radio],
-.controls select,
-.controls button {
-  margin-left: 8px;
-}
 #maze {
   overflow-y: scroll;
   /* position: fixed; */
   position: relative;
   float: left;
-  margin: 30px;
+  /* margin: 30px; */
+  margin: 30px 100px;
   background-color: #808080;
 }
