response now has distance map and solved MazeTypes
response now has distance map and solved MazeTypes

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -18,15 +18,15 @@
         </select>
       </li> 
       <li>
-        <input type="radio" id="display-type-choice-1" value="unsolved" name="display-type" checked="checked" />
+        <input type="radio" id="display-type-choice-1" value="Unsolved" name="display-type" checked="checked" />
         <label for="display-type-choice-1" class="menu-radio">Unsolved</label>
       </li>
       <li>
-        <input type="radio" id="display-type-choice-2" value="distance--map" name="display-type" />
+        <input type="radio" id="display-type-choice-2" value="DistanceMap" name="display-type" />
         <label for="display-type-choice-2" class="menu-radio">Distance Map</label>
       </li>
       <li>
-        <input type="radio" id="display-type-choice-3" value="solved" name="display-type" />
+        <input type="radio" id="display-type-choice-3" value="Solved" name="display-type" />
         <label for="display-type-choice-3" class="menu-radio">Solved</label>
       </li>
       <li><a id="send-button" href="#" class="menu-button">Generate</a></li>
