--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -26,4 +26,5 @@
       <label for="display-type-choice-3" class="menu-radio"><input type="radio" id="display-type-choice-3" value="Solved" name="display-type" /></label>
     </div>
     <div id="maze"></div>
+    <div id="hidden-maze"></div>
 }
