color scheme is consistent until next maze is created
color scheme is consistent until next maze is created

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -306,11 +306,16 @@ body.dark-mode {
   background-color: #808080;
 }
 
-#hidden-maze {
+.hidden {
   display: none;
   width: 0;
   height: 0;
 }
+/* #hidden-maze {
+  display: none;
+  width: 0;
+  height: 0;
+} */
 
 /** COLOR GRADIENTS  **/
 
