--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -28,4 +28,6 @@
     <div id="maze"></div>
     <div id="hidden-maze" class="hidden"></div>
     <div id="hidden-color" class="hidden"></div>
+    <div id="hidden-width" class="hidden"></div>
+    <div id="hidden-height" class="hidden"></div>
 }
