start/goal coords are now working; added a "loading" animated gif
start/goal coords are now working; added a "loading" animated gif

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -33,6 +33,7 @@
       <label for="display-type-choice-2" class="menu-radio"><input type="radio" id="display-type-choice-2" value="DistanceMap" name="display-type" /></label>
       <label for="display-type-choice-3" class="menu-radio"><input type="radio" id="display-type-choice-3" value="Solved" name="display-type" /></label>
     </div>
+    <div id="loading-modal"></div>
     <div id="maze"></div>
     <div id="hidden-maze" class="hidden"></div>
     <div id="hidden-color" class="hidden"></div>
