--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -313,6 +313,22 @@ body.dark-mode {
   background-color: #808080;
 }
 
+#loading-modal {
+  display:    none;
+  position:   fixed;
+  z-index:    1000;
+  top:        0;
+  left:       0;
+  height:     100%;
+  width:      100%;
+  background: rgba( 255, 255, 255, .5 ) 
+              /* url('http://i.stack.imgur.com/FhHRx.gif')  */
+              /* url("../images/cat-loading.gif") */
+              url("../images/loading-200px-200px.gif")
+              50% 40% 
+              no-repeat;
+}
+
 .hidden {
   display: none;
   width: 0;
