--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -8,16 +8,16 @@
     <ul class="menu-bar">
       <li><a href="#" class="menu-button">Maze</a></li>
       <li>
-        <label for="width">width: &nbsp;&nbsp;<input type="text" id="width" class="numbers" maxlength="3" value="" /></label>
-        <label for="height">height: <input type="text" id="height" class="numbers" maxlength="3" value="" /></label>
+        <label for="width">width: &nbsp;&nbsp;<input type="tel" id="width" class="numbers" maxlength="3" inputmode="numeric" pattern="[0-9\s]{1,3}" value="" /></label>
+        <label for="height">height: <input type="tel" id="height" class="numbers" maxlength="3" inputmode="numeric" pattern="[0-9\s]{1,3}" value="" /></label>
       </li>
       <li>
-        <label for="start-x">start x: &nbsp;<input type="text" id="start-x" class="numbers" maxlength="3" value="" /></label>
-        <label for="start-y">start y: <input type="text" id="start-y" class="numbers" maxlength="3" value="" /></label>
+        <label for="start-x">start x: &nbsp;<input type="tel" id="start-x" class="numbers" maxlength="3" inputmode="numeric" pattern="[0-9\s]{1,3}" value="" /></label>
+        <label for="start-y">start y: <input type="tel" id="start-y" class="numbers" maxlength="3" inputmode="numeric" pattern="[0-9\s]{1,3}" value="" /></label>
       </li>
       <li>
-        <label for="goal-x">goal x: &nbsp;<input type="text" id="goal-x" class="numbers" maxlength="3" value="" /></label>
-        <label for="goal-y">goal y: <input type="text" id="goal-y" class="numbers" maxlength="3" value="" /></label>
+        <label for="goal-x">goal x: &nbsp;<input type="tel" id="goal-x" class="numbers" maxlength="3" inputmode="numeric" pattern="[0-9\s]{1,3}" value="" /></label>
+        <label for="goal-y">goal y: <input type="tel" id="goal-y" class="numbers" maxlength="3" inputmode="numeric" pattern="[0-9\s]{1,3}" value="" /></label>
       </li>
       <li>
         <select id='select-generator' >
@@ -26,6 +26,7 @@
           <option value='sidewinder'>sidewinder</option>
         </select>
       </li>
+      <!-- <li><input type="tel" /></li>  -->
       <li><a id="send-button" href="#" class="menu-button">generate</a></li>
     </ul> 
     <div id="d-type" >
