--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,6 +20,11 @@
         <label for="goal-y">goal y: <input type="tel" id="goal-y" class="numbers" maxlength="3" inputmode="numeric" pattern="[0-9\s]{1,3}" value="" /></label>
       </li>
       <li>
+        <label>cell size: </label>
+        <label for="cell-size-small" class="menu-radio"><input type="radio" id="cell-size-small" value="7" name="cell-size" /> small</label>
+        <label for="cell-size-large" class="menu-radio"><input type="radio" id="cell-size-large" value="10" name="cell-size" checked="checked" /> large</label>
+      </li>
+      <li>
         <select id='select-generator' >
           <option value=''>algorithm</option>
           <option value='binarytree'>binary tree</option>
@@ -37,6 +42,6 @@
     <div id="maze"></div>
     <div id="hidden-maze" class="hidden"></div>
     <div id="hidden-color" class="hidden"></div>
-    <div id="hidden-width" class="hidden"></div>
-    <div id="hidden-height" class="hidden"></div>
+    <!-- <div id="hidden-width" class="hidden"></div>
+    <div id="hidden-height" class="hidden"></div> -->
 }
