--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -42,4 +42,5 @@
     <div id="maze"></div>
     <div id="hidden-maze" class="hidden"></div>
     <div id="hidden-color" class="hidden"></div>
+    <div id="hidden-distance" class="hidden"></div>
 }
