--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -42,5 +42,7 @@
     <div id="maze"></div>
     <div id="hidden-maze" class="hidden"></div>
     <div id="hidden-color" class="hidden"></div>
+    <div id="hidden-solution" class="hidden"></div>
     <div id="hidden-distance" class="hidden"></div>
+    <div id="hidden-max-distance" class="hidden"></div>
 }
