--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -34,9 +34,10 @@
       <li><a id="send-button" href="#" class="menu-button">generate</a></li>
     </ul> 
     <div id="d-type" >
+      <input type="checkbox" id="solved" name="solved" />
       <label for="display-type-choice-unsolved" class="menu-radio"><input type="radio" id="display-type-choice-unsolved" value="Unsolved" name="display-type" checked="checked" /></label>
       <label for="display-type-choice-distance-map" class="menu-radio"><input type="radio" id="display-type-choice-distance-map" value="DistanceMap" name="display-type" /></label>
-      <label for="display-type-choice-solved" class="menu-radio"><input type="radio" id="display-type-choice-solved" value="Solved" name="display-type" /></label>
+      <!-- <label for="display-type-choice-solved" class="menu-radio"><input type="radio" id="display-type-choice-solved" value="Solved" name="display-type" /></label> -->
     </div>
     <div id="loading-modal"></div>
     <div id="maze"></div>
