--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -37,6 +37,7 @@
       <input type="checkbox" id="solved" name="solved" />
       <label for="display-type-choice-unsolved" class="menu-radio"><input type="radio" id="display-type-choice-unsolved" value="Unsolved" name="display-type" checked="checked" /></label>
       <label for="display-type-choice-distance-map" class="menu-radio"><input type="radio" id="display-type-choice-distance-map" value="DistanceMap" name="display-type" /></label>
+      <input type="range" id="speed" name="speed" min="10" max="80" value="10" style="direction:rtl; width:80px; margin-left:30px; margin-top:8px; position:relative; top:6px;" />
     </div>
     <div id="loading-modal"></div>
     <div id="maze"></div>
