initial logic for clicking on cells to manually solve
initial logic for clicking on cells to manually solve

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -46,4 +46,5 @@
     <div id="hidden-solution" class="hidden"></div>
     <div id="hidden-distance" class="hidden"></div>
     <div id="hidden-max-distance" class="hidden"></div>
+    <div id="hidden-visited" class="hidden"></div>
 }
