intermittent commit regarding manual drawing of path
intermittent commit regarding manual drawing of path

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -21,8 +21,9 @@
       </li>
       <li>
         <label>cell size: </label>
-        <label for="cell-size-small" class="menu-radio"><input type="radio" id="cell-size-small" value="7" name="cell-size" /> small</label>
-        <label for="cell-size-large" class="menu-radio"><input type="radio" id="cell-size-large" value="10" name="cell-size" checked="checked" /> large</label>
+        <label for="cell-size-small" class="menu-radio"><input type="radio" id="cell-size-small" value="7" name="cell-size" /></label>
+        <label for="cell-size-med" class="menu-radio"><input type="radio" id="cell-size-med" value="10" name="cell-size" checked="checked" /></label>
+        <label for="cell-size-large" class="menu-radio"><input type="radio" id="cell-size-large" value="20" name="cell-size" /></label>
       </li>
       <li>
         <select id='select-generator' >
