--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,8 +10,8 @@
       <li>
         <label>cell size: </label>
         <label for="cell-size-small" class="menu-radio"><input type="radio" id="cell-size-small" value="7" name="cell-size" /></label>
-        <label for="cell-size-med" class="menu-radio"><input type="radio" id="cell-size-med" value="10" name="cell-size" checked="checked" /></label>
-        <label for="cell-size-large" class="menu-radio"><input type="radio" id="cell-size-large" value="20" name="cell-size" /></label>
+        <label for="cell-size-med" class="menu-radio"><input type="radio" id="cell-size-med" value="10" name="cell-size" /></label>
+        <label for="cell-size-large" class="menu-radio"><input type="radio" id="cell-size-large" value="20" name="cell-size"  checked="checked" /></label>
       </li>
       <li>
         <label for="width">width: &nbsp;&nbsp;<input type="tel" id="width" class="numbers" maxlength="3" inputmode="numeric" pattern="[0-9\s]{1,3}" value="" /></label>
