--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -48,4 +48,5 @@
     <div id="hidden-distance" class="hidden"></div>
     <div id="hidden-max-distance" class="hidden"></div>
     <div id="hidden-visited" class="hidden"></div>
+    <!-- <div id="hidden-display-type-selection" class="hidden"></div> -->
   }
