--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -42,6 +42,14 @@
     </div>
     <div id="loading-modal"></div>
     <div id="maze"></div>
+    <div id="outer-navigation">
+      <input type="button" id="left-navigation" />
+      <div id="navigation">
+        <input type="button" id="up-navigation" />
+        <input type="button" id="down-navigation" />
+      </div>
+      <input type="button" id="right-navigation" />
+    </div>
     <div id="hidden-maze" class="hidden"></div>
     <div id="hidden-color" class="hidden"></div>
     <div id="hidden-solution" class="hidden"></div>
