--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -313,58 +313,66 @@ body.dark-mode {
 }
 
 #outer-navigation {
-  /* border: 0.05em solid red; */
   width:100%;
   display: flex;
   justify-content: center;
+
 }
 
-#navigation {
+#outer-navigation input[type=button] {
+  /* background-color: #222; */
+  background-color: #808080;
+  border: solid 1px #333;
+  text-align: center;
+} 
+#outer-navigation input[type=button]:active {
+  background-color: #555;
+  color: #999;
+}
+
+#inner-navigation {
   border: 0.05em solid black;  
-  /* width: 210px; */
   width: 100px;
 }
 
-#navigation * {
+#inner-navigation * {
   display: inline-block;
 }
-/* #navigation #up-down-navigation * {
-  width: 100px !important;
-} */
 
-#navigation #up-navigation,
-#navigation #down-navigation {
-  /* width: 110px; */
-  width: 100px;
-  height:50%;
-  /* margin: auto; */
+#inner-navigation #up-navigation,
+#inner-navigation #down-navigation {
+  /* width: 100px;
+  height:50%; */
+  width: 50%;
+  height:100px;
   text-align: center;
   float: right;
-  /* float: left; */
 }
 #left-navigation,
 #right-navigation {
   width: 50px;
 }
-/* #navigation #left-navigation,
-#navigation #right-navigation {
-  width: 48px;
-  height: 100%;
-} */
-/* #navigation #left-navigation {
-  float: right;
+#up-navigation {
+  transform: rotate(270deg);
+  transform-origin: left;
 }
-#navigation #right-navigation {
-  float: left;
-} */
-
+#down-navigation {
+  transform: rotate(90deg);
+  transform-origin: left;
+  position: relative; /* not sure why position is messed up after rotating character, this is a band-aid */
+  left: 49px; /* not sure why position is messed up after rotating character, this is a band-aid */
+}
+#left-navigation {
+  transform: rotate(180deg);
+  transform-origin: left;
+  position: relative; /* not sure why position is messed up after rotating character, this is a band-aid */
+  left: 49px; /* not sure why position is messed up after rotating character, this is a band-aid */
+}
 #maze {
   overflow-y: scroll;
   /* position: fixed; */
   position: relative;
   float: left;
-  /* margin: 30px; */
-  /* margin: 1em 1em; */
   margin: 0 1em 1em 1em;
   background-color: #808080;
 }
