--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -324,6 +324,7 @@ body.dark-mode {
   background-color: #808080;
   border: solid 1px #333;
   text-align: center;
+  color: #000;
 } 
 #outer-navigation input[type=button]:active {
   background-color: #555;
