disable double tap zoom for nav buttons and made buttons' color #000
disable double tap zoom for nav buttons and made buttons' color #000

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -43,12 +43,12 @@
     <div id="loading-modal"></div>
     <div id="maze"></div>
     <div id="outer-navigation">
-      <input type="button" id="left-navigation" value="&#x27A4;" />
+      <input type="button" id="left-navigation" class="disable-dbl-tap-zoom" value="&#x27A4;" />
       <div id="inner-navigation">
-        <input type="button" id="up-navigation" value="&#x27A4;" />
-        <input type="button" id="down-navigation" value="&#x27A4;" />
+        <input type="button" id="up-navigation" class="disable-dbl-tap-zoom" value="&#x27A4;" />
+        <input type="button" id="down-navigation" class="disable-dbl-tap-zoom" value="&#x27A4;" />
       </div>
-      <input type="button" id="right-navigation" value="&#x27A4;" />
+      <input type="button" id="right-navigation" class="disable-dbl-tap-zoom" value="&#x27A4;" />
     </div>
     <div id="hidden-maze" class="hidden"></div>
     <div id="hidden-color" class="hidden"></div>
