hide navigation until first maze is drawn
hide navigation until first maze is drawn

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -42,7 +42,7 @@
     </div>
     <div id="loading-modal"></div>
     <div id="maze"></div>
-    <div id="outer-navigation">
+    <div id="outer-navigation" style="display: none">
       <input type="button" id="left-navigation" class="disable-dbl-tap-zoom" value="&#x27A4;" />
       <div id="inner-navigation">
         <input type="button" id="up-navigation" class="disable-dbl-tap-zoom" value="&#x27A4;" />
