use defaults so user doesn't have to always set things to generate maze
use defaults so user doesn't have to always set things to generate maze

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -29,7 +29,7 @@
         <select id='select-generator' >
           <option value=''>algorithm</option>
           <option value='binarytree'>binary tree</option>
-          <option value='sidewinder'>sidewinder</option>
+          <option value='sidewinder' selected>sidewinder</option>
         </select>
       </li>
       <li><a id="send-button" href="#" class="menu-button">generate</a></li>
