+aldous broder; changed default start/goal based on screen dimension
+aldous broder; changed default start/goal based on screen dimension

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -30,6 +30,7 @@
           <option value=''>algorithm</option>
           <option value='binarytree'>binary tree</option>
           <option value='sidewinder' selected>sidewinder</option>
+          <option value='aldousBroder' >aldous-broder</option>
         </select>
       </li>
       <li><a id="send-button" href="#" class="menu-button">generate</a></li>
