updates for width/height/start/goal input change events
updates for width/height/start/goal input change events

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -29,8 +29,8 @@
         <select id='select-generator' >
           <option value=''>algorithm</option>
           <option value='binarytree'>binary tree</option>
-          <option value='sidewinder' selected>sidewinder</option>
-          <option value='aldousBroder' >aldous-broder</option>
+          <option value='sidewinder'>sidewinder</option>
+          <option value='aldousBroder' selected>aldous-broder</option>
         </select>
       </li>
       <li><a id="send-button" href="#" class="menu-button">generate</a></li>
