path highlighted (in blue) after manually solved
path highlighted (in blue) after manually solved

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -57,4 +57,5 @@
     <div id="hidden-distance" class="hidden"></div>
     <div id="hidden-max-distance" class="hidden"></div>
     <div id="hidden-visited" class="hidden"></div>
+    <div id="hidden-solved" class="hidden"></div>
   }
