wilson's maze algorithm
wilson's maze algorithm

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -31,6 +31,7 @@
           <option value='binarytree'>binary tree</option>
           <option value='sidewinder'>sidewinder</option>
           <option value='aldousBroder' selected>aldous-broder</option>
+          <option value='Wilsons'>wilson's</option>
         </select>
       </li>
       <li><a id="send-button" href="#" class="menu-button">generate</a></li>
