replay button to generate new maze without needing to open menu
replay button to generate new maze without needing to open menu

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -37,6 +37,7 @@
       <li><a id="send-button" href="#" class="menu-button">generate</a></li>
     </ul> 
     <div id="d-type" >
+      <div id="maze-button" title="generate a new maze" ></div>
       <input type="checkbox" id="solved" name="solved" />
       <label for="display-type-choice-unsolved" class="menu-radio"><input type="radio" id="display-type-choice-unsolved" value="Unsolved" name="display-type" checked="checked" /></label>
       <label for="display-type-choice-distance-map" class="menu-radio"><input type="radio" id="display-type-choice-distance-map" value="DistanceMap" name="display-type" /></label>
