--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -26,12 +26,13 @@
         <label for="goal-y">goal y: <input type="tel" id="goal-y" class="numbers" maxlength="3" inputmode="numeric" pattern="[0-9\s]{1,3}" value="" /></label>
       </li>
       <li>
-        <select id='select-generator' >
-          <option value=''>algorithm</option>
-          <option value='binarytree'>binary tree</option>
-          <option value='sidewinder'>sidewinder</option>
-          <option value='aldousBroder' selected>aldous-broder</option>
-          <option value='Wilsons'>wilson's</option>
+        <select id="select-generator" >
+          <option value="">algorithm</option>
+          <option value="binarytree">binary tree</option>
+          <option value="sidewinder">sidewinder</option>
+          <option value="aldousBroder" selected>aldous-broder</option>
+          <option value="wilsons">wilson's</option>
+          <option value="huntAndKill">hunt-and-kill</option>
         </select>
       </li>
       <li><a id="send-button" href="#" class="menu-button">generate</a></li>
