recursive backtracker added
recursive backtracker added

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -33,6 +33,7 @@
           <option value="aldousBroder" selected>aldous-broder</option>
           <option value="wilsons">wilson's</option>
           <option value="huntAndKill">hunt-and-kill</option>
+          <option value="recursiveBacktracker">recursive backtracker</option>
         </select>
       </li>
       <li><a id="send-button" href="#" class="menu-button">generate</a></li>
